<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="186dp"
        android:layout_height="287dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_hero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_intelligence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/intelligence"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_intelligence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_intelligence"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_intelligence"
        tools:text="80%" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/title_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="Ant-man" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/strength"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_intelligence"
        app:layout_constraintTop_toBottomOf="@+id/tv_intelligence" />

    <TextView
        android:id="@+id/tv_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="50%"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/speed"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_strength"
        app:layout_constraintTop_toBottomOf="@+id/tv_strength" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="12%"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/power"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_speed"
        app:layout_constraintTop_toBottomOf="@+id/tv_speed" />

    <TextView
        android:id="@+id/tv_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        tools:text="25%"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_appearance"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_fist_appearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        android:text="Hulk Vol 2 #2 (April, 2008) (as A-Bomb)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/publisher"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fist_appearance" />

    <TextView
        android:id="@+id/tv_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        android:text="Marvel Comics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/alignment"
        android:textColor="@color/title_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_publisher" />

    <TextView
        android:id="@+id/tv_alignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        android:text="good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />


</androidx.constraintlayout.widget.ConstraintLayout>